bifrost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bifrost
  namespace: bifrost
spec:
  parentRefs:
    - {name: cluster-gateway, namespace: istio-system, sectionName: https-bifrost}
  hostnames: ["inference.gd03.me"]
  rules:
    - backendRefs: [{name: bifrost, port: 8080}]
